fix create currdate

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
           if(dates.some((leaveDay) => leaveDay.getDate()-1 === i)){
               divCol.style.color = 'red';
           }
-          const currentDay = new Date(year.year, month.getMonth()+1, i+1);
+          const currentDay = new Date(year.year, month.getMonth(), i+1);
           if (currentDay.getDay() == 0 || currentDay.getDay() == 6) {   //if Sunday or Saturday
               divCol.style.color = 'blue';
           }
