--- a/index.html
+++ b/index.html
@@ -135,6 +135,8 @@
           divRow.appendChild(divCol);
         }
       }
+      const br = document.createElement('br');
+      resultDiv.appendChild(br);
     }
 
     function daysInMonth(month, year) {
