--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <label for="leavedays">Giorni di ferie disponibili</label>
         <input type="number" class="form-control" id="leavedays" required>
       </div>
-      <button type="submit" id="calculate" class="btn btn-primary">Calcola</button>
+      <button type="submit" id="calculate" class="btn btn-primary" >Calcola</button>
     </form>
 
     <hr>
@@ -111,40 +111,70 @@
           li.appendChild(document.createTextNode(formattedDate));
           ul.appendChild(li);
         }
-        console.log(`cur month: ${month}`);
+
         let divRow = null;
+        let divRowHeader = null;
         for (let i = 0; i < daysInMonth(month.getMonth() + 1, year.year); i++) {
           if (i % 7 == 0) {
-            if (divRow != null) {
+            if (divRow != null && divRowHeader != null) {
+              resultDiv.appendChild(divRowHeader);
               resultDiv.appendChild(divRow);
             }
             divRow = document.createElement('div');
             divRow.className = "row";
+            divRowHeader = document.createElement('div');
+            divRowHeader.className = "row";
           }
           const divCol = document.createElement('div');
           divCol.className = 'col border';
+          const divColHeader = document.createElement('div');
+          divColHeader.className = 'col bg-light border-top border-right border-left font-weight-bold';
+
+          const currentDay = new Date(year.year, month.getMonth(), i + 1);
+
+          // Set header text
+          const shortWeekDay = currentDay.toLocaleString('default', {  weekday: 'short' });
+          divColHeader.appendChild(document.createTextNode(shortWeekDay));
+          divRowHeader.appendChild(divColHeader);
+
           if (dates.some((leaveDay) => leaveDay.getDate() - 1 === i)) {
             divCol.className += ' bg-danger text-white';
           }
-          const currentDay = new Date(year.year, month.getMonth(), i + 1);
+          
           if (currentDay.getDay() == 0 || currentDay.getDay() == 6) {   //if Sunday or Saturday
             divCol.className += ' bg-primary text-white';
           }
 
           if (publicHolidaysDates.some((publicDay) => publicDay.getMonth() == currentDay.getMonth() && currentDay.getDate() == publicDay.getDate())) {
             divCol.className += ' bg-success text-white';
+            divCol.setAttribute("data-toggle", "tooltip");
+            divCol.setAttribute("data-placement", "top");
+            const publicHoliday = publicHolidaysDates.find((publicDay) => publicDay.getMonth() == currentDay.getMonth() && currentDay.getDate() == publicDay.getDate());
+            let descEn = "";
+            for (const publicHolidayJson of year.publicHolidays) {
+              const datePublicHoliday = new Date(publicHolidayJson.day);
+              if(datePublicHoliday.getMonth() == publicHoliday.getMonth() && datePublicHoliday.getDate() == publicHoliday.getDate()){
+                descEn = publicHolidayJson.description_en;
+              } 
+            }
+            divCol.setAttribute("title",descEn);
           }
           divCol.appendChild(document.createTextNode(i + 1));
           divRow.appendChild(divCol);
         }
-        console.log(`has ${divRow.hasChildNodes()}`);
+
         if (divRow.hasChildNodes()) {
           const remaining = 7 - divRow.childNodes.length;
           for(let i = 0; i < remaining; i++){
+            const divColHeader = document.createElement('div');
+            divColHeader.className = 'col border-0';
+            divRowHeader.appendChild(divColHeader);
+
             const divCol = document.createElement('div');
             divCol.className = 'col border-0';
             divRow.appendChild(divCol);
           }
+          resultDiv.appendChild(divRowHeader);
           resultDiv.appendChild(divRow);
         }
       }
@@ -243,6 +273,8 @@
     const obj = JSON.parse(holidaysPerCountry);
 
     $(document).ready(function () {
+
+      $('[data-toggle="tooltip"]').tooltip();
 
       const countriesDropdown = document.getElementById("countries");
       countriesDropdown.innerHTML = '<option value="-1"></option>';
