--- a/index.html
+++ b/index.html
@@ -42,6 +42,50 @@
         <label for="leavedays">Giorni di ferie disponibili</label>
         <input type="number" class="form-control" id="leavedays" required>
       </div>
+      <p>Working days:</p>
+      <div class="form-check">
+        <input class="form-check-input" type="checkbox" value="" id="monday" checked>
+        <label class="form-check-label" for="monday">
+          Monday
+        </label>
+      </div>
+      <div class="form-check">
+        <input class="form-check-input" type="checkbox" value="" id="tuesday" checked>
+        <label class="form-check-label" for="tuesday">
+          Tuesday
+        </label>
+      </div>
+      <div class="form-check">
+        <input class="form-check-input" type="checkbox" value="" id="wednesday" checked>
+        <label class="form-check-label" for="wednesday">
+          Wednesday
+        </label>
+      </div>
+      <div class="form-check">
+        <input class="form-check-input" type="checkbox" value="" id="thursday" checked>
+        <label class="form-check-label" for="thursday">
+          Thursday
+        </label>
+      </div>
+      <div class="form-check">
+        <input class="form-check-input" type="checkbox" value="" id="friday" checked>
+        <label class="form-check-label" for="friday">
+          Friday
+        </label>
+      </div>
+      <div class="form-check">
+        <input class="form-check-input" type="checkbox" value="" id="saturday" >
+        <label class="form-check-label" for="saturday">
+          Saturday
+        </label>
+      </div>
+      <div class="form-check">
+        <input class="form-check-input" type="checkbox" value="" id="sunday" >
+        <label class="form-check-label" for="sunday">
+          Sunday
+        </label>
+      </div>
+      <br>
       <button type="submit" id="calculate" class="btn btn-primary" >Calcola</button>
     </form>
 
