--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       </div>
       <div class="form-group">
         <label for="leavedays">Giorni di ferie disponibili</label>
-        <input type="number" class="form-control" id="leavedays" required>
+        <input type="number" class="form-control" id="leavedays" min="1" max="365" required>
       </div>
       <p>Working days:</p>
       <div class="form-check">
