--- a/index.html
+++ b/index.html
@@ -28,17 +28,17 @@
 
     <form class="needs-validation" novalidate>
       <div class="form-group">
-        <label for="countries">Nazione</label>
+        <label for="countries">Nazione:</label>
         <select class="form-control" id="countries" onchange="if (this.selectedIndex) fillYear();" required>
         </select>
       </div>
       <div class="form-group">
-        <label for="years">Anno</label>
+        <label for="years">Anno:</label>
         <select class="form-control" id="years" required>
         </select>
       </div>
       <div class="form-group">
-        <label for="leavedays">Giorni di ferie disponibili</label>
+        <label for="leavedays">Giorni di ferie disponibili:</label>
         <input type="number" class="form-control" id="leavedays" min="1" max="365" required>
       </div>
       <p>Giorni lavorativi:</p>
